[package]
name = "PlantCoin_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dotenvy = "0.15.7"
log = "0.4.29"
pretty_env_logger = "0.5.0"
rusqlite = "0.39.0"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.52.2", features = ["full"] }
uuid = "1.23.1"
